start adding results slides

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -25,6 +25,7 @@
 \usepackage[authoryear,round]{natbib}
 
 \graphicspath{ {./figures/} }
+% \input{preamble.tex}
 
 \def \calE {\mathcal{E}}
 \def \calF {\mathcal{F}}
@@ -87,6 +88,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Presentación  del proyecto}
+\begin{definition*}
+asdf
+\end{definition*}
 
 	\begin{block}{Contexto}
 		\begin{itemize}
@@ -599,6 +603,42 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 
 \end{frame}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Resultados}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Resultados:
+%
+%
+%
+%
+
+\begin{frame}{Foo}
+	\begin{block}{Bar}
+		Baz
+		\medskip
+		foo
+	\end{block}
+
+	\pause
+
+	\begin{block}{foo}
+		varrr
+
+		\medskip
+			asdf
+
+		\medskip
+		alala
+
+		\medskip
+		foo
+	\end{block}
+\end{frame}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -629,7 +669,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 		Clasificadores de alta performance para todos salvo el problema 2
 
 		\medskip
-		Bajo nivel para la métrica $F1$ en el problema 2, salvo para el clasificador de ``Navie Bayes''
+		Bajo nivel para la métrica $F1$ en el problema 2, salvo para el clasificador de ``Naive Bayes''
 	\end{block}
 \end{frame}
 
@@ -709,7 +749,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 		\end{column}
 		\begin{column}{0.55 \textwidth}
 				\center
-				Juan de Monasterio \\
+				Juan Mateo de Monasterio \\
 				\textit{laterio@gmail.com} \\
 		\end{column}
 	\end{columns}
