error in abstract

--- a/preface.tex
+++ b/preface.tex
@@ -18,5 +18,5 @@ Este análisis servirá para ayudar en los esfuerzos de prevención del Chagas e
 Para hacer esto, utilizamos diferentes modelos probabilísticos del subcampo de Aprendizaje Automático.
 Para cada usuario más de 150 atributos fueron extraídos de los datos y analizados para evaluar la probabilidad de que el usuario haya migrado desde la zona endémica.
 Los resultados aquí expuestos sirven para discriminar aquellos atributos más relevantes en la detección de estos movimientos, especialmente en usuarios de fuertes lazos sociales con la región endémica, de alta movilidad y en usuarios con un alto grado de movilidad.
-A través de visualizaciones geográficas, logramos agregar estas relaciones sociales para mostrar locaciones tradicionalmente no endémicas que potencialmente sean focos endémicos y que aún no son como tales.
+A través de visualizaciones geográficas, logramos agregar estas relaciones sociales para mostrar locaciones tradicionalmente no endémicas que potencialmente sean focos endémicos y que aún no son reconocidos como tales.
 
