--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -12,7 +12,7 @@
 
 \usepackage{fancybox}
 \usefonttheme[onlymath]{serif}
-\boldmath
+\boldmath\
 
 
 \usepackage{scalefnt}
@@ -27,13 +27,13 @@
 \graphicspath{ {./figures/} }
 % \input{preamble.tex}
 
-\def \calE {\mathcal{E}}
-\def \calF {\mathcal{F}}
-\def \calG {\mathcal{G}}
-\def \calN {\mathcal{N}}
-\def \calP {\mathcal{P}}
-\def \calR {\mathcal{R}}
-\def \calW {\mathcal{W}}
+\def\calE{\mathcal{E}}
+\def\calF{\mathcal{F}}
+\def\calG{\mathcal{G}}
+\def\calN{\mathcal{N}}
+\def\calP{\mathcal{P}}
+\def\calR{\mathcal{R}}
+\def\calW{\mathcal{W}}
 
 
 \usepackage{array}
@@ -41,9 +41,7 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
-\beamertemplatenavigationsymbolsempty
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\beamertemplatenavigationsymbolsempty%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
   \title[Chagas \& Big Data]{Explorando migraciones y difusión del mal de Chagas en América Latina con aprendizaje automático}
@@ -79,7 +77,7 @@
 
 
 \begin{frame}
-\titlepage
+\titlepage\
 \end{frame}
 
 
@@ -104,7 +102,7 @@ asdf
 		\end{itemize}
 	\end{block}
 
-	\pause
+	\pause\
 
 	\begin{block}{ Trabajo colaborativo}
 		\begin{itemize}
@@ -135,7 +133,7 @@ asdf
 		\end{itemize}
 	\end{block}
 
-	\pause
+	\pause\
 
 	\begin{block}{ Colaboración}
 		\begin{itemize}
@@ -216,13 +214,13 @@ asdf
 	% Chagas is a disease:
 	El Chagas es una enfermedad:
 	\begin{itemize}
-		\item ... con diferentes vías de transmisión y donde las \textbf{migraciones de largo plazo} juegan un papel clave
+		\item \ldots con diferentes vías de transmisión y donde las \textbf{migraciones de largo plazo} juegan un papel clave
 		%explicar vertical, congenita y transfusion/transplante
-		\item ... donde un pequeño número de la población infectada sabe que la está padeciendo
+		\item \ldots donde un pequeño número de la población infectada sabe que la está padeciendo
 		% for which a low proportion of the infected population knows that they have the disease.
-		\item ... con una fase asimptomática que puede extenderse más de 10 años
+		\item \ldots con una fase asimptomática que puede extenderse más de 10 años
 		% % ORALLY SAY: 30 years of vector mitigation activities in GC.
-		\item ... que es epidémica y desatendida
+		\item \ldots que es epidémica y desatendida
 		% \item ... which is epidemic and unattended.
 	\end{itemize}
 	En particular, la Fundación busca encontrar chagásicos en zonas no tradicionalmente endémicas
@@ -232,7 +230,7 @@ asdf
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Objetivo}
-	\begin{block}{ ...atacar problemáticas de América Latina relacionadas con el Chagas}
+	\begin{block}{\ldots atacar problemáticas de América Latina relacionadas con el Chagas}
 
 	% The purpose of this work is to support ongoing national health campaigns
 	% by analyzing mobility information contained in Call Detail Records.
@@ -262,8 +260,8 @@ asdf
 
 \begin{frame}{Social visualization: The Communications Graph}
 
-	\center
-	\includegraphics[width = 1.0 \textwidth, trim = 0 0 0 0cm , clip = true]
+	\center\
+	\includegraphics[width = 1.0 \textwidth, trim = 0 0 0 0cm, clip = true]
 	{slides/Graph-screenshot.jpg}
 
 \end{frame}
@@ -338,7 +336,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 
 		\end{itemize}
 	\end{block}
-	\pause
+	\pause\
 	\begin{block}{Aggregation of vulnerable users}
 		\begin{itemize}
 			%\item For every user, we listed all of his call receivers in a given month.
@@ -426,7 +424,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 	\frametitle{Mapa de calor: Argentina, $\beta$ = 1 \%}
-	\center
+	\center\
 	\includegraphics[height=.9\textheight,width = .9\columnwidth, keepaspectratio]
 	{slides/201112_hi_res_argentina_usuarios_proporcion_circulos_beta1.png}
 \end{frame}
@@ -434,7 +432,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 	\frametitle{Mapa de calor: Argentina, $\beta$ = 15 \%}
-	\center
+	\center\
 	\includegraphics[height=.9\textheight,width = .9\columnwidth, keepaspectratio]
 	{slides/201112_hi_res_argentina_usuarios_proporcion_circulos_beta15.png}
 \end{frame}
@@ -442,7 +440,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 	\frametitle{Mapa de calor: Argentina, $\beta$ = 30 \%}
-	\center
+	\center\
 	\includegraphics[height=.9\textheight,width = .9\columnwidth, keepaspectratio]
 	{slides/201112_hi_res_argentina_usuarios_proporcion_circulos_beta30.png}
 \end{frame}
@@ -450,7 +448,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
 	\frametitle{Mapa de calor: Argentina, $\beta$ = 50 \%}
-	\center
+	\center\
 	\includegraphics[height=.9\textheight,width = .9\columnwidth, keepaspectratio]
 	{slides/201112_hi_res_argentina_usuarios_proporcion_circulos_beta50.png}
 \end{frame}
@@ -464,10 +462,10 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 	%A partir de estos primeros mapas se decidi\'o enfocar la visualizaci\'on y mejorar la precisi\'on en ciertas regiones fuera del Gran Chaco.
 		\begin{itemize}
 			\item Tierra del Fuego
-			\item Este de R\'io Negro
+			\item Este de Río Negro
 			\item Buenos Aires
 			\item Capital Federal, South and North CABA, and AMBA
-			\item C\'ordoba Central
+			\item Córdoba Central
 		\end{itemize}
 \end{frame}
 
@@ -510,11 +508,12 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 
 	\begin{block}{Some communities outside the big cities}
 		\begin{itemize}
-			\item Cordoba: Freyre, La Tordilla, Balnearia, ... % etc. %hay muchas mas pero no se si esta bien poner esto
-			\item AMBA: Avellaneda, Parque Patricios, San Isidro, ... % etc.
-			\item Bs As Province: Lima, San Nicolas.
-			\item La Rioja: Chamical and Malanz\'an.
-			\item Salta: Tartagal.
+			\item Cordoba: Freyre, La Tordilla, Balnearia
+			%hay muchas mas pero no se si esta bien poner esto
+			\item AMBA: Avellaneda, Parque Patricios, San Isidro
+			\item Provincia de Bs As: Lima, San Nicolas
+			\item La Rioja: Chamical y Malanz\'an
+			\item Salta: Tartagal
 		\end{itemize}
 
 	\end{block}
@@ -573,7 +572,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 		\end{itemize}
 	\end{itemize}
 
-	\begin{block}{Feature - Target Correlation}
+	\begin{block}{Correlaciones entre atributos y targets}
 
 	As expected, there was a high Pearson correlation between $Y$ and calling patterns with the endemic region.
 	%All of them being above \($0.7$\).
@@ -584,23 +583,17 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{ ML setup}
-
-%		\begin{block}{ML Setup}
-
 			Standard industry classifiers were fit with
 			and 5-Fold cross validation and a 10\% hold out set for scoring.
 
 			\medskip
 
 			All standard metrics used rated higher than $0.96$. The lowest of them being the weighted F1 score with $0.964$.
-%		\end{block}
 
-%
+%		\end{block}
 %		\begin{block}{Scores}
-%
 %		\end{block}
 %
-
 \end{frame}
 
 
@@ -622,7 +615,7 @@ The antenna datasets consists of more than five thousand geolocalized antennas.
 		foo
 	\end{block}
 
-	\pause
+	\pause\
 
 	\begin{block}{foo}
 		varrr
@@ -679,18 +672,15 @@ Salvo el clasificador de ``Naive Bayes'', la performance fue muy baja en $F1$ cu
 \medskip
 Los tres tipos de features más relevantes para la clasificaición de los migrantes estaban relacionadas con:
 
-\begin{enumerate*}[label={\alph*)},]
-\item la mobilidad del usuario
-\item las interacciones y patrones de llamados con vecinos vulnerables, y
-\item actividad celular en los meses más cercanos a $T_0$, así como también la actividad en el mes de Diciembre.
-\end{enumerate*}
-
-a) la mobilidad del usuario, b)
-
-
-a) the area of influence of the
-users, where large mobility was indicative of past migrants, b) interactions and calling
-patterns with vulnerable users, and c) calls placed in the months nearest to T0 and
+% \begin{enumerate*}[label={\alph*)},]
+% \item la mobilidad del usuario
+% \item las interacciones y patrones de llamados con vecinos vulnerables, y
+% \item actividad celular en los meses más cercanos a $T_0$, así como también la actividad en el mes de Diciembre.
+% \end{enumerate*}
+1 la mobilidad del usuario,
+2 the area of influence of the
+users, A where large mobility was indicative of past migrants, B interactions and calling
+patterns with vulnerable users, and C calls placed in the months nearest to T0 and
 also, calls placed in December.
 
 \end{frame}
@@ -765,12 +755,12 @@ also, calls placed in December.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ==============================================
 
-\begin{frame}{Gracias! $:)$}
+\begin{frame}{Gracias! }
 	\begin{columns}
 		\begin{column}{0.20 \textwidth}
 		\end{column}
 		\begin{column}{0.55 \textwidth}
-				\center
+				\center\
 				Juan Mateo de Monasterio \\
 				\textit{laterio@gmail.com} \\
 		\end{column}
