minor spanish aspell

--- a/slides_defensa.tex
+++ b/slides_defensa.tex
@@ -53,7 +53,7 @@
   }
   \institute[]{
   \and \inst{1} Universidad de Buenos Aires
-  \and \inst{3} Grandata Labs
+  \and \inst{3} GranData Labs
 
   }
 
@@ -93,8 +93,8 @@ asdf
 	\begin{block}{Contexto}
 		\begin{itemize}
 			\item Comienzo en agosto 2015
-			\item Investigacion sobre la enfermedad del Chagas.
-			\item Trabajo multidisciplinario de biologia, computacion, estadistica
+			\item Investigación sobre la enfermedad del Chagas.
+			\item Trabajo multidisciplinario de biología, computación, estadística
 			\begin{itemize}
 				\item ``Big Data'' + Aprendizaje Automático integrando datos de telefonía celular
 				\item  Buscamos caracterizar y predecir migraciones de usuarios
@@ -124,8 +124,8 @@ asdf
 
 			\item Comienzo en agosto 2015
 			\item Colaboración entre Fundación Mundo Sano, GranData Labs y UBA
-			\item Investigacion sobre la enfermedad del Chagas.
-			\item Trabajo multidisciplinario de biologia, computacion, estadistica
+			\item Investigación sobre la enfermedad del Chagas.
+			\item Trabajo multidisciplinario de biología, computación, estadística
 			\begin{itemize}
 				\item ``Big Data'' + Aprendizaje Automático integrando datos de telefonía celular
 				\item  Buscamos caracterizar y predecir migraciones de usuarios
@@ -149,7 +149,7 @@ asdf
 
 \begin{frame}{ Epidemiología del Chagas}
 
-			El Chagas es una enfermedad causada por el \textit{trypanozoma cruzi}, un parásito que se extiende por todo el continente American.
+			El Chagas es una enfermedad causada por el \textit{trypanozoma cruzi}, un parásito que se extiende por todo el continente Americano.
 			% y tambi\'en predominante en algunas comunidades que han migrado de esta zona. .
 
 			\medskip  La Organización Mundial de la Salud (OMS) estima 65 millones de personas expuestas a esta enfermedad que es endémica en más de 21 países latino americanos.
@@ -187,7 +187,7 @@ asdf
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Chagas en Méjico}
+\begin{frame}{Chagas en México}
 	\begin{columns}
 		\begin{column}{0.3\textwidth}
 
@@ -218,7 +218,7 @@ asdf
 		%explicar vertical, congenita y transfusion/transplante
 		\item \ldots donde un pequeño número de la población infectada sabe que la está padeciendo
 		% for which a low proportion of the infected population knows that they have the disease.
-		\item \ldots con una fase asimptomática que puede extenderse más de 10 años
+		\item \ldots con una fase asintomática que puede extenderse más de 10 años
 		% % ORALLY SAY: 30 years of vector mitigation activities in GC.
 		\item \ldots que es epidémica y desatendida
 		% \item ... which is epidemic and unattended.
@@ -258,7 +258,7 @@ asdf
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\begin{frame}{Social visualization: The Communications Graph}
+\begin{frame}{Social visualización: The Comunicacional Grafo}
 
 	\center\
 	\includegraphics[width = 1.0 \textwidth, trim = 0 0 0 0cm, clip = true]
