add relative number of migrating users

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -437,7 +437,7 @@ As an example, lower left means was endemic, is now not endemic.
 \end{table}
 
 In relative numbers, this shows that only 2.59\% of users had a change in their endemic condition over time.
-A similar count results in that 66.0\% of users have not changed their home antenna from $T_0$ to $T_1$.
+A similar count results in that 66.0\% of users have not changed their home antenna from $T_0$ to $T_1$ and that approximately 5\% of past endemic users moved into non-endemic during this time period.
 This is not surprising given that we wouldn't expect a large number of people migrating in a time lapse of only two years.
 
 
